--- a/index.html
+++ b/index.html
@@ -7,31 +7,45 @@
 
 <body>
 
-<header class="top">
-	<h1 class="left">Welcome to my website</h1>
-	<p class="right">Mickey Mouse | Logout | My Account | My Tasks </p>
-</header>
+<!-- header -->
+  <header role="banner" class="top">
+	  <h1 class="left">Welcome to the finance website</h1>
+	  <p class="right">Mickey Mouse | Logout | My Account | My Tasks </p>
+  </header>
+<!-- /header -->
 
+<!-- top navigation -->
+  <nav class="clearfix">	
+    <a href="index.html">Home</a> .
+    <a href="previous.html">Basel II</a> .
+    <a href="next.html">Reports</a> .
+    <a href="previous.html">Abacus</a> .
+    <a href="next.html">Parameters</a> .
+    <a href="previous.html">TFP</a> .
+    <a href="previous.html">Tasks</a> .  
+    <a href="next.html">Others</a>
+  </nav>
+<!-- /top navigation -->
 
-<nav>	
-  <a href="index.html">Home Page</a> |
-  <a href="previous.html">Basel II</a> |
-  <a href="next.html">Reports</a> |
-  <a href="previous.html">Abacus</a> |
-  <a href="next.html">Parameters</a> |
-  <a href="previous.html">TFP</a> |
-  <a href="previous.html">Tasks</a> |  
-  <a href="next.html">Others</a>
-</nav>
-
-<div id="container" class="container">
+<!--div class="clearfix"></div-->
+  <div id="logo" class="clearfix">
+    <!--a href="http://www.rails4.me">Test</a-->
+    <h1>  </h1>
+  </div>
 
 <br>
 
-	...
-	The content
-	...
+<div id="box" class="box">
+  <h3> This is the title</h3>
+  <p> Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</p>
+</div>
 
+
+<br>
+
+<div id="box" class="box">
+  <h3> This is the title</h3>
+  <p> Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</p>
 </div>
 
 </body>
